--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
     <ul id="foods">
       <li>
         <h2>Cheesecake</h2>
-        <img src="images/cheesecakeImage.jpg" alt="Blueberry cheesecake" width="200" height="200">
+        <img src="iimages4project/cheesecake.jpg" alt="Blueberry cheesecake" width="200" height="200">
         <p>One of my hobbies is baking, and I actually plan to bake a cheesecake this summer. I found an amazing <a href="https://preppykitchen.com/chocolate-marble-cheesecake/">recipe</a> that I'll follow, and the result looks phenomenal.</p>
       </li>
       <li>
         <h2>Cashews</h2>
-        <img src="images/cashewsImage.jpg" alt="Cashews" width="200" height="200">
+        <img src="images4project/cashews.jpg" alt="Cashews" width="200" height="200">
         <p>I personally love munching and crunching on these. I'm more of a texture person when it comes to food, and I like eating food that's fun to eat.</p>
       </li>
       <li>
         <h2>Coffee</h2>
-        <img src="images/coffeeImage.jpg" alt="Latte with a design in a mug" width="200" height="200">
+        <img src="images4project/latte.jpg" alt="Latte with a design in a mug" width="200" height="200">
         <p>My favorite coffee to drink during the warmer months is iced and steaming hot during the colder months.</p>
       </li>
       <li>
         <h2>Pasta</h2>
-        <img src="images/pastaImage.jpg" alt="Spaghetti with cooked shrimp on a plate" width="200" height="200">
+        <img src="images4project/pasta.jpg" alt="Spaghetti with cooked shrimp on a plate" width="200" height="200">
         <p>I think Italian cuisine might be my favorite type of food.</p>
       </li>
       <li>
         <h2>Oats</h2>
-        <img src="images/oatsImage.jpg" alt="Oats in a glass jar" width="200" height="200">
+        <img src="images4project/oats.jpg" alt="Oats in a glass jar" width="200" height="200">
         <p>Before I go to bed, I prepare overnight oats and it's honestly the main reason I look forward to waking up the next day.</p>
       </li>
     </ul>
